backlog: file UD-286..UD-291 from relocate code audit
Six tickets from a focused read-only audit of the relocate code path,
launched after the 345 GB live test surfaced the WSAECONNABORTED
cascade + long unexplained pauses described in UD-285. The audit
brief: find swallowed exceptions, non-logged failures, and other
silent-degradation patterns. Four blocking + two notable findings,
all in three files (CloudRelocator.kt, WebDavApiService.kt,
WebDavProvider.kt).

UD-286 (high / S) — CloudRelocator swallows per-file failures with no
log line + breaks CancellationException propagation. Smoking gun:
the live unidrive.log (7.5 MB) contains zero ERROR/WARN lines for
the active relocate despite the user seeing failures at the CLI.
Four `catch (e: Exception)` blocks at CloudRelocator.kt:138, 162,
213, 225 share both anti-patterns — message-only logging + absorbing
CancellationException. Fix mirrors SyncEngine's pattern; also closes
the UD-300 / CancellationPropagationTest contract gap that
CloudRelocator currently fails. Land first — without this, the
remaining tickets in this cluster are hard to diagnose.

UD-287 (high / S) — WebDAV Apache5 connection pool reuses half-closed
sockets after timeout. PoolingAsyncClientConnectionManagerBuilder
built with all defaults — no setValidateAfterInactivity, no
evictExpiredConnections, no idle eviction. After UD-285's 600s
timeout fires, Ktor cancels the in-flight write but Apache5 returns
the connection to the pool half-closed. The next PUT picks it up
→ Windows TCP returns WSAECONNABORTED (the German error). Companion
bug: WebDavApiService.kt:175-186 calls flushAndClose() outside the
withContext(Dispatchers.IO) block, so an exception in the IO loop
leaves the channel without its terminating frame — that's the bug
that creates the bad pool entries the eviction policy then has to
clean up.

UD-288 (high / S) — WebDAV provider has no retry logic on transient
HTTP failures. Grepped core/providers/webdav/ for retry/HttpRequest-
TimeoutExc